--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>rUn ThE cAT!</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='icon' type='image/png' href='/assets/icon.png'> 
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
@@ -22,4 +22,6 @@
 
 <body>
 	<script defer src='/build/bundle.js'></script>
-</body </html>
+</body>
+
+</html>
