add starting screen

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
 	<!-- p5play -->
 	<script src="https://p5play.org/v3/planck.min.js"></script>
 	<script src="https://p5play.org/v3/p5play.js"></script>
+	<!-- google font -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 
 </head>
 
