--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://p5play.org/v3/planck.min.js"></script>
     <script src="https://p5play.org/v3/p5play.js"></script>
     <script src="/lib/scenemanager.js"></script>
+    <script src="/lib/p5.clickable.js"></script>
   </head>
   <body>
     <script defer type="module" src="/src/main.js"></script>
